--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "2.0.*",
+        "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-jui": "2.0.*",
         "bower-asset/dropzone": "~5.3"
     },
